--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "swiper": "^11.2.7",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
