--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^8.15.0",
     "next": "15.3.2",
     "nodemailer": "^7.0.3",
+    "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
